--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -26,4 +26,6 @@ configure_file(
   ${CMAKE_BINARY_DIR}/project-global-decls.h
 )
 
+add_subdirectory(app)
 add_subdirectory(log)
+add_subdirectory(qt6)
