--- a/misc/flatpak.conf.json.in
+++ b/misc/flatpak.conf.json.in
@@ -1,8 +1,8 @@
 {
   "id": "${FLATPAK_PROJECT_URL}",
-  "runtime": "org.freedesktop.Platform",
-  "runtime-version": "24.08",
-  "sdk": "org.freedesktop.Sdk",
+  "runtime": "org.kde.Platform",
+  "runtime-version": "6.8",
+  "sdk": "org.kde.Sdk",
   "command": "${PROJECT_BINARY_NAME}",
   "modules": [
     {
@@ -16,5 +16,11 @@
         }
       ]
     }
+  ],
+  "finish-args": [
+    "--share=ipc", 
+    "--socket=fallback-x11",
+    "--socket=wayland",
+    "--device=dri"
   ]
 }
