--- a/src/lib/facade/CMakeLists.txt
+++ b/src/lib/facade/CMakeLists.txt
@@ -2,7 +2,9 @@ cmake_minimum_required(VERSION 3.13)
 
 target_sources(
   ${PROJECT_LIBRARY_NAME}
-  PRIVATE LibraryFacade.cpp
+  PRIVATE 
+    LibraryFacade.cpp
+    BarchImage.cpp
 )
 
 install(
