Introducing the raw BMPImage class

--- a/src/lib/facade/CMakeLists.txt
+++ b/src/lib/facade/CMakeLists.txt
@@ -11,6 +11,7 @@ install(
     LibraryFacade.h 
     LibraryContext.h
     ILib.h
+    IBarchImage.h
   DESTINATION include/${PROJECT_LIBRARY_NAME} 
   COMPONENT Development
 )
