--- a/src/lib/libmain/converters/CMakeLists.txt
+++ b/src/lib/libmain/converters/CMakeLists.txt
@@ -3,7 +3,7 @@ cmake_minimum_required(VERSION 3.13)
 target_sources(
   ${PROJECT_LIBRARY_NAME}
   PRIVATE 
-    BMP2BarchConverter.cpp
+    BMP2BarchConverter0.cpp
 )
 
 add_subdirectory(tests)
