Implementing basic LibMain CTs

--- a/src/lib/libmain/converters/tests/unit/Barch2BMPConverter0/CMakeLists.txt
+++ b/src/lib/libmain/converters/tests/unit/Barch2BMPConverter0/CMakeLists.txt
@@ -9,10 +9,10 @@ add_executable(
   ${CMAKE_SOURCE_DIR}/src/lib/libmain/images/BMPImage.cpp
 )
 
+#${GENERAL_MOCKS_ROOT}/log
 target_include_directories(
   UTEST_Barch2BMPConverter0
   PRIVATE 
-   ${GENERAL_MOCKS_ROOT}/log
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_BINARY_DIR}
    ${CMAKE_SOURCE_DIR}/src/lib/facade
@@ -21,6 +21,7 @@ target_include_directories(
 target_link_libraries(
   UTEST_Barch2BMPConverter0
   GTest::gtest_main GTest::gmock
+  TemplateProjectSimpleLoggerObj
 )
 
 include(GoogleTest)
