--- a/src/lib/libmain/tests/component/CMakeLists.txt
+++ b/src/lib/libmain/tests/component/CMakeLists.txt
@@ -7,4 +7,11 @@ endif()
 # disabling the asserts for the tests
 add_compile_options(-DNDEBUG=1)
 
+configure_file(LibMain_includes.h.in LibMain_includes.h)
+
+include_directories(
+  ${CMAKE_CURRENT_BINARY_DIR}  
+)
+
 add_subdirectory(LibMain)
+
