Lib code reorg and implementing the basic library CMake install module

--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,5 +1,7 @@
 cmake_minimum_required(VERSION 3.13)
 
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+
 add_library(
   ${PROJECT_LIBRARY_NAME}
   SHARED
@@ -9,12 +11,9 @@ target_include_directories(
   ${PROJECT_LIBRARY_NAME}
   PRIVATE ${CMAKE_SOURCE_DIR}
   PRIVATE ${CMAKE_BINARY_DIR}
-  INTERFACE facade
-)
-
-include_directories(
-  ${PROJECT_LIBRARY_NAME}
-  INTERFACE facade
+  PUBLIC
+    $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/facade/includes>
+    $<INSTALL_INTERFACE:include/${PROJECT_LIBRARY_NAME}>
 )
 
 set_target_properties(
@@ -24,14 +23,6 @@ set_target_properties(
   SOVERSION ${PROJECT_VERSION_MAJOR}
 )
 
-install(
-  TARGETS ${PROJECT_LIBRARY_NAME}
-  LIBRARY
-    DESTINATION lib
-    COMPONENT Runtime
-    NAMELINK_COMPONENT Development
-)
-
 target_link_libraries(
   ${PROJECT_BINARY_NAME}
   ${PROJECT_LIBRARY_NAME}
@@ -39,3 +30,6 @@ target_link_libraries(
 
 add_subdirectory(facade)
 add_subdirectory(libmain)
+
+include(barch-coder-0-libcmake-module-gen)
+
