--- a/src/lib/libmain/images/tests/unit/BMPImage/CMakeLists.txt
+++ b/src/lib/libmain/images/tests/unit/BMPImage/CMakeLists.txt
@@ -12,7 +12,7 @@ target_include_directories(
    ${GENERAL_MOCKS_ROOT}/log
    ${CMAKE_SOURCE_DIR}
    ${CMAKE_BINARY_DIR}
-   ${CMAKE_SOURCE_DIR}/src/lib/facade
+   ${CMAKE_SOURCE_DIR}/src/lib/facade/includes
 )
 
 target_link_libraries(
