--- a/src/lib/libmain/readers/tests/component/BarchReader/CMakeLists.txt
+++ b/src/lib/libmain/readers/tests/component/BarchReader/CMakeLists.txt
@@ -14,7 +14,7 @@ target_include_directories(
   PRIVATE ${GENERAL_MOCKS_ROOT}/LibraryContext
   PRIVATE ${CMAKE_SOURCE_DIR}
   PRIVATE ${CMAKE_BINARY_DIR}
-  PRIVATE ${CMAKE_SOURCE_DIR}/src/lib/facade
+  PRIVATE ${CMAKE_SOURCE_DIR}/src/lib/facade/includes
 )
 
 target_link_libraries(
