Basic integration of the lib into the UI

--- a/src/qt6/CMakeLists.txt
+++ b/src/qt6/CMakeLists.txt
@@ -23,7 +23,9 @@ target_include_directories(
     ${CMAKE_SOURCE_DIR}
     ${CMAKE_BINARY_DIR}
     ${CMAKE_CURRENT_SOURCE_DIR}
-  PUBLIC Qt6::Core
+  PUBLIC 
+    ${CMAKE_SOURCE_DIR}/src/lib/facade/includes
+  PUBLIC Qt6::Core ${PROJECT_LIBRARY_NAME}
 )
 
 target_link_libraries(
