--- a/misc/Dockerfile.in
+++ b/misc/Dockerfile.in
@@ -19,8 +19,9 @@ ARG BUILDDIR=/src/${PROJECT_BINARY_NAME}-build-docker-singlerun
 RUN --mount=from=project,target=/src/${PROJECT_BINARY_NAME} \ 
  cd /src/${PROJECT_BINARY_NAME} && \
  mkdir -vp $BUILDDIR && \
- cmake -S . -B $BUILDDIR -DCMAKE_BUILD_TYPE=Release &&  \
+ cmake -S . -B $BUILDDIR -DCMAKE_BUILD_TYPE=Debug -DMAX_LOG_LEVEL=6 &&  \
  cmake --build $BUILDDIR -j$(nproc) --target ${PROJECT_BINARY_NAME} && \
  cmake --install $BUILDDIR --prefix /usr
 
-CMD ["${PROJECT_BINARY_NAME}"]
+CMD ["${PROJECT_BINARY_NAME}", "--cwd", "${IN_DOCKER_IMAGES_DIRECTORY}"]
+
