Introducing the error message dialog with integration into FileListModel

--- a/misc/Dockerfile.in
+++ b/misc/Dockerfile.in
@@ -13,6 +13,7 @@ RUN apt install -y qt6-base-dev qt6-base-dev-tools \
   libqt6openglwidgets6 qml6-module-qtquick-layouts
 RUN apt install -y libopengl-dev libgl-dev
 RUN apt install -y qml6-module-qtquick-controls
+RUN apt install -y qml6-module-qtquick-dialogs
 
 ARG BUILDDIR=/src/${PROJECT_BINARY_NAME}-build-docker-singlerun
 
