Repairing sanitizers located error

--- a/src/app/tests/CMakeLists.txt
+++ b/src/app/tests/CMakeLists.txt
@@ -4,6 +4,8 @@ if(NOT ENABLE_UNIT_TESTS)
   return()
 endif()
 
+add_compile_options(-DNDEBUG=1)
+
 set(APP_MOCKS_ROOT "${CMAKE_CURRENT_SOURCE_DIR}/mocks")
 
 add_subdirectory(unit)
